--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,10 @@
     margin-top: 0 !important;
 }
 
+.ring-none {
+    box-shadow: none !important;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 8px;
@@ -42,7 +46,7 @@
     background: #efecde;
 }
 @layer base {
-  :root {
+    :root {
         --radius: 0.5rem;
     }
 }
